--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@ title: Home
 id: home
 ---
 <img src="/assets/images/magnet.png" alt="">
+<div id="crossing-animation">
+    <div id="left-line" class="part"></div>
+    <div id="right-text" class="part"></div>
+</div>
