--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 title: Home
 id: home
 ---
-<img src="/assets/images/magnet.png" alt="">
+<img class="main-logo" src="/assets/images/magnet.png" alt="">
 <div id="crossing-animation">
     <div id="left-line" class="part"></div>
-    <div id="right-text" class="part"></div>
+    <div id="right-text" class="part">attract your audience</div>
 </div>
