--- a/clients.html
+++ b/clients.html
@@ -2,13 +2,12 @@
 title: Clients
 id: clients
 ---
-<h1>Clients</h1>
-
-<ul>
-  {% for client in site.clients %}
-    <li>
-      <h2><a href="{{ client.url }}">{{ client.name }}</a></h2>
-      <p>{{ client.content | markdownify }}</p>
-    </li>
-  {% endfor %}
-</ul>
+<div id="clients-content">
+  <ul>
+    {% for client in site.clients %}
+      <li>
+        <h2><a href="{{ client.url }}">{{ client.name }}</a></h2>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
