--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Home
 id: home
 ---
-<img class="main-logo" src="/assets/images/magnet.png" alt="">
+<img class="main-logo fadeIn animated" src="/assets/images/magnet.png" alt="">
 <div id="crossing-animation">
     <div id="left-line" class="part"></div>
     <div id="right-text" class="part">attract your audience</div>
