--- a/works.html
+++ b/works.html
@@ -9,7 +9,7 @@ id: works
   </div>
   <ul id="works-list">
     {% for work in site.works %}
-      <li>
+      <li class="fadeIn animated">
         <a href="{{ work.url }}">{{ work.name }}</a>
       </li>
     {% endfor %}
