--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ id: home
 <img class="main-logo fadeIn animated" src="/assets/images/magnet.png" alt="">
 <div id="crossing-animation">
     <div id="left-line" class="part"></div>
-    <div id="right-text" class="part">attract your audience</div>
+    <div id="right-text" class="part"></div>
 </div>
