--- a/brands.html
+++ b/brands.html
@@ -6,7 +6,7 @@ id: clients
   <ul>
     {% for client in site.clients %}
       <li>
-        <h2><a href="{{ client.url }}">{{ client.name }}</a></h2>
+        <a href="{{ client.url }}"><img class="brightness" src="{{ client.logo_url }}" alt="{{ client.name }}" /></a>
       </li>
     {% endfor %}
   </ul>
