--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,13 @@ title: Contact
 id: contact
 ---
 
-<div class="contact" style="font-size: 1.5em;">
-    <p style="font-size: 1.2em; line-height: 2em;">
-        Esentepe Mahallesi, Kore Şehitleri Cd. 16-1, daire 71, kat 10. <br> İstanbloom Residence Şişli/İstanbul
+<div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3007.8188603637764!2d29.00960581541597!3d41.07295197929432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x399c6629c4b28c36!2sMagnet+Creative+Branding!5e0!3m2!1str!2str!4v1546607736940" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <p>
+        Esentepe Mahallesi, Kore Şehitleri Cd. <br> 16-1, daire 71, kat 10. <br> İstanbloom Residence Şişli/İstanbul
+        <br><br>
+        <a href="mailto:info@magnetcb.com">info@magnetcb.com</a>
+        <br><br>
+        <a href="tel:+908505228699">+90 850 522 86 99</a>
     </p>
-    
-    <p><a href="mailto:info@magnetcb.com">info@magnetcb.com</a></p>
-    <p><a href="tel:+908505228699">+90 850 522 86 99</a></p>
 </div>
