--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ title: Contact
 id: contact
 ---
 
-<div>
+<div class="fadeIn animated">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3007.8188603637764!2d29.00960581541597!3d41.07295197929432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x399c6629c4b28c36!2sMagnet+Creative+Branding!5e0!3m2!1str!2str!4v1546607736940" frameborder="0" style="border:0" allowfullscreen></iframe>
     <p>
         Esentepe Mahallesi, Kore Şehitleri Cd. <br> 16-1, daire 71, kat 10. <br> İstanbloom Residence Şişli/İstanbul
