Change logo layout, Add brand work

--- a/brands.html
+++ b/brands.html
@@ -3,9 +3,73 @@ title: Clients
 id: clients
 ---
 <div id="clients-content">
-    {% for client in site.clients %}
+    <div>
+      <a href="/clients/maxx-royal/"><img class="brightness" src="assets/images/maxx-royal/logo.png" alt="Maxx Royal" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/voyage/"><img class="brightness" src="assets/images/voyage/logo.png" alt="Voyage Hotel" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/elevatione/"><img class="brightness" src="assets/images/elevatione/logo.png" alt="Elevatione" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/fiolas/"><img class="brightness" src="assets/images/fiolas/logo.png" alt="Fiolas" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/lotus-walk/"><img class="brightness" src="assets/images/lotus-walk/logo.png" alt="Lotus Walk" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/chef-grup/"><img class="brightness" src="assets/images/chef-grup/logo.png" alt="Chef Grup" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/era-kozmetik/"><img class="brightness" src="assets/images/era-kozmetik/logo.png" alt="Era Kozmetik" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/lotus-nisantasi/"><img class="brightness" src="assets/images/lotus-nisantasi/logo.png" alt="Lotus Nisantasi" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/core-living/"><img class="brightness" src="assets/images/core-living/logo.png" alt="Core Living" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/hakan-yildirim/"><img class="brightness" src="assets/images/hakan-yildirim/logo.png" alt="Hakan Yildirim" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/salvador-brand/"><img class="brightness" src="assets/images/salvador-brand/logo.png" alt="Salvador Brand" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/catch/"><img class="brightness" src="assets/images/catch/logo.png" alt="Catch" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/yapi-yapi/"><img class="brightness" src="assets/images/yapi-yapi/logo.png" alt="Yapi & Yapi" /></a>
+    </div>
+
+    <div>
+      <a href="/clients/raphael/"><img class="brightness" src="assets/images/raphael/logo.png" alt="Raphael" /></a>
+    </div>
+  
+    <div>
+      <a href="/clients/chef-meyhane/"><img class="brightness" src="assets/images/chef-meyhane/logo.png" alt="Chef Meyhane" /></a>
+    </div>
+  
+    <div>
+      <a href="/clients/kudra/"><img class="brightness" src="assets/images/kudra/logo.png" alt="Kudra" /></a>
+    </div>
+  
+    <!-- {% for client in site.clients %}
       <div>
         <a href="{{ client.url }}"><img class="brightness" src="{{ client.logo_url }}" alt="{{ client.name }}" /></a>
       </div>
-    {% endfor %}
+    {% endfor %} -->
 </div>
