--- a/brands.html
+++ b/brands.html
@@ -1,5 +1,5 @@
 ---
-title: Clients
+title: Brands
 id: clients
 ---
 <div id="clients-content">
@@ -60,7 +60,7 @@ id: clients
     </div>
   
     <div>
-      <a href="/clients/chef-meyhane/"><img class="brightness" src="assets/images/chef-meyhane/logo.png" alt="Chef Meyhane" /></a>
+      <a href="/clients/chef-meyhane/"><img style="width:80%;" class="brightness" src="assets/images/chef-meyhane/logo.png" alt="Chef Meyhane" /></a>
     </div>
   
     <div>
