Change yapi images

--- a/brands.html
+++ b/brands.html
@@ -20,7 +20,7 @@ id: clients
     </div>
 
     <div>
-      <a href="/clients/lotus-walk/"><img class="brightness" src="assets/images/lotus-walk/logo.png" alt="Lotus Walk" /></a>
+      <a href="/clients/lotus-walk/"><img style="width:70%;" class="brightness" src="assets/images/lotus-walk/logo.png" alt="Lotus Walk" /></a>
     </div>
 
     <div>
@@ -36,7 +36,7 @@ id: clients
     </div>
 
     <div>
-      <a href="/clients/core-living/"><img class="brightness" src="assets/images/core-living/logo.png" alt="Core Living" /></a>
+      <a href="/clients/core-living/"><img style="width:70%;" class="brightness" src="assets/images/core-living/logo.png" alt="Core Living" /></a>
     </div>
 
     <div>
@@ -52,7 +52,7 @@ id: clients
     </div>
 
     <div>
-      <a href="/clients/yapi-yapi/"><img class="brightness" src="assets/images/yapi-yapi/logo.png" alt="Yapi & Yapi" /></a>
+      <a href="/clients/yapi-yapi/"><img style="width:70%;" class="brightness" src="assets/images/yapi-yapi/logo.png" alt="Yapi & Yapi" /></a>
     </div>
 
     <div>
@@ -60,7 +60,7 @@ id: clients
     </div>
   
     <div>
-      <a href="/clients/chef-meyhane/"><img style="width:80%;" class="brightness" src="assets/images/chef-meyhane/logo.png" alt="Chef Meyhane" /></a>
+      <a href="/clients/chef-meyhane/"><img style="width:60%;" class="brightness" src="assets/images/chef-meyhane/logo.png" alt="Chef Meyhane" /></a>
     </div>
   
     <div>
