Add new work, Change brand

--- a/brands.html
+++ b/brands.html
@@ -64,7 +64,7 @@ id: clients
     </div>
   
     <div>
-      <a href="/clients/kudra/"><img class="brightness" src="assets/images/kudra/logo.png" alt="Kudra" /></a>
+      <a href="/clients/essenence-originals/"><img style="width:70%;" class="brightness" src="assets/images/essenence-originals/logo.png" alt="Essenence Originals" /></a>
     </div>
   
     <!-- {% for client in site.clients %}
