--- a/brands.html
+++ b/brands.html
@@ -40,7 +40,7 @@ id: clients
     </div>
 
     <div>
-      <a href="/clients/hakan-yildirim/"><img class="brightness" src="assets/images/hakan-yildirim/logo.png" alt="Hakan Yildirim" /></a>
+      <a href="#"><img class="brightness" src="assets/images/hakan-yildirim/logo.png" alt="Hakan Yildirim" /></a>
     </div>
 
     <div>
