Hide lotus walk

--- a/brands.html
+++ b/brands.html
@@ -19,7 +19,7 @@ id: clients
       <a href="/clients/fiolas/"><img class="brightness" src="assets/images/fiolas/logo.png" alt="Fiolas" /></a>
     </div>
 
-    <div>
+    <div style="display:none;">
       <a href="/clients/lotus-walk/"><img style="width:70%;" class="brightness" src="assets/images/lotus-walk/logo.png" alt="Lotus Walk" /></a>
     </div>
 
