SEO - Title & Description

--- a/brands.html
+++ b/brands.html
@@ -1,5 +1,6 @@
 ---
-title: Brands
+title: Brands & Clients
+description: Magnet Creative Branding is immensely proud to work alongside some incredible clients. Learn more about our work with them here.
 id: clients
 ---
 <div id="clients-content">
