--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 ---
-title: Contact
+title: Contact Us
+description: We deliver the best for your brand. Tell us your story; let us know what you are looking for. Don’t hesitate to contact us!
 id: contact
 ---
 
