--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-title: Home
+title: Boutique Creative Agency
+description: We are a boutique creative agency providing custom-tailored services for a select clientele. We deliver the best for your brand!
 id: home
 ---
 <img class="main-logo fadeIn animated" src="/assets/images/magnet.png" alt="">
