--- a/works.html
+++ b/works.html
@@ -1,5 +1,6 @@
 ---
-title: Works
+title: Our Work | Portfolio
+description: We help brands to create comprehensive strategies and methodologies to effectively communicate, connect and grow. View a sample of our work!
 id: works
 ---
 <div id="works-content">
